--- a/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.html
@@ -6,18 +6,24 @@
     </div>
 
     <div class="toolbar__controls">
-      <button class="toolbar__btn btn-icon">
-        <img src="/assets/icons/filter.png">
-        Фильтр
+      <button class="toolbar__dropdown btn-icon">
+        <img src="/assets/icons/more.png">
+        Ещё
       </button>
-      <button class="toolbar__btn btn-icon">
-        <img src="/assets/icons/attachment.png">
-        Прикрепить
-      </button>
-      <button class="toolbar__btn btn-icon">
-        <img src="/assets/icons/export.png">
-        Экспорт
-      </button>
+      <div class="toolbar__actions">    
+        <button class="toolbar__btn btn-icon">
+          <img src="/assets/icons/filter.png">
+          Фильтр
+        </button>
+        <button class="toolbar__btn btn-icon">
+          <img src="/assets/icons/attachment.png">
+          Прикрепить
+        </button>
+        <button class="toolbar__btn btn-icon">
+          <img src="/assets/icons/export.png">
+          Экспорт
+        </button>
+      </div>
     </div>
   </div>
 </section>
