--- a/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.scss
+++ b/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.scss
@@ -8,17 +8,41 @@
         display: flex;
         align-items: center;
         padding: 11.5px 25px;
+
+        @media (max-width: $md2) {
+            padding: 11.5px 15px;
+        }
     }
 
     &__search { 
         margin: 0px 25px 0px 0px;
         flex: 1 1 auto;
+
+        @media (max-width: $md2) {
+            margin: 0px 10px 0px 0px;
+        }
     }
 
     &__controls {
+        flex: 0 1 34%;
+
+        @media (max-width: $md2) {
+            flex: 0 1 auto;
+        }
+    }
+
+    &__dropdown { 
+        @media (min-width: $md2) {
+            display: none;
+        }
+    }
+
+    &__actions { 
         display: flex;
         justify-content: space-between;
 
-        flex: 0 1 34%;
-    }
+        @media (max-width: $md2) {
+            display: none;
+        }
+    } 
 }
