introduce ibg system class

--- a/projects/administration-portal/src/app/components/authentication/login/login.component.html
+++ b/projects/administration-portal/src/app/components/authentication/login/login.component.html
@@ -42,7 +42,7 @@
           >Зайти</button>
         </form>
       </div>
-      <div class="login__side-image login--half">
+      <div class="login__side-image login--half _ibg">
         <img src="/assets/images/bg_login.jpg" alt="">
       </div>
     </div>
