--- a/projects/administration-portal/src/app/components/confections/confection-table/confection-table.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-table/confection-table.component.html
@@ -26,7 +26,7 @@
           </td>
           <td>
             <div class="confection-table__product-details product-details">
-              <div class="product-details__image">
+              <div class="product-details__image _ibg">
                 <img src="https://media.wired.com/photos/598e35fb99d76447c4eb1f28/master/pass/phonepicutres-TA.jpg" alt="">
               </div>
               <div class="product-details__text">
