--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.scss
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.scss
@@ -6,7 +6,11 @@
     }
 
 	&__title { 
-        margin: 0px 0px 15px 0px;
+        margin: 0px 0px 20px 0px;
+
+        @media (max-width: $md3) {
+            margin: 0px 0px 15px 0px;
+        }
     }
 
 	&__tab-menu { 
