--- a/projects/administration-portal/src/app/scss/base/_base.scss
+++ b/projects/administration-portal/src/app/scss/base/_base.scss
@@ -26,3 +26,16 @@ body {
     font-weight: 500;
     color: $light-orange;
 }
+
+._ibg {
+    position: relative;
+    
+    img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+    }
+}
