use mock data for order table

--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -9,6 +9,7 @@
 
     <app-order-table 
       class="order-list__order-table"
+      [orders]="orders"
     ></app-order-table>
 
     <app-pagination 
