add mock datat for confection table

--- a/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
@@ -4,6 +4,8 @@
 
     <app-confection-table 
       class="confection-list__confection-table"
+      [confections]="confections"
+      [isLoading]="isLoading"
     ></app-confection-table>
 
     <app-pagination 
