--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -10,6 +10,7 @@
     <app-order-table 
       class="order-list__order-table"
       [orders]="orders"
+      [isLoading]="isLoading"
     ></app-order-table>
 
     <app-pagination 
