--- a/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.html
@@ -6,10 +6,6 @@
     </div>
 
     <div class="toolbar__controls">
-      <button class="toolbar__dropdown btn-icon">
-        <img src="/assets/icons/more.png">
-        Ещё
-      </button>
       <div class="toolbar__actions">    
         <button class="toolbar__btn btn-icon">
           <img src="/assets/icons/filter.png">
@@ -23,6 +19,37 @@
           <img src="/assets/icons/export.png">
           Экспорт
         </button>
+      </div>
+
+      <div class="toolbar__dropdown">
+        <div class="dropdown">
+          <button class="dropdown__btn btn-icon">
+            <img src="/assets/icons/more.png">
+            Ещё
+          </button>
+          <div class="dropdown__menu">
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="/assets/icons/filter.png">
+                  <span>Фильтр</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="/assets/icons/attachment.png">
+                  <span>Прикрепить</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="/assets/icons/export.png">
+                  <span>Экспорт</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
