--- a/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.scss
+++ b/projects/administration-portal/src/app/components/orders/order-table/order-table-toolbar/order-table-toolbar.component.scss
@@ -45,4 +45,55 @@
             display: none;
         }
     } 
+
+    &__dropdown {
+        @media (min-width: $md2) {
+            display: none;
+        }
+    }
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+
+    &:hover .dropdown__menu {
+        display: block;
+        visibility: visible;
+        transform: translateY(0);
+    }
+
+	&__menu { 
+        background: white;
+        border-radius: .7em;
+        border: 1px solid $gray-stroke;
+        position: absolute;
+        font-size: 0.9rem;
+        right: 0;
+        top: 40px;
+        padding: .4em;
+        box-sizing: border-box;
+        min-width: 160px;
+        z-index: 5;
+        transform: translateY(-1em);
+        transition: transform .5s;
+        visibility: hidden;
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+
+            li a {
+                display: flex;
+                text-decoration: none;
+                padding: .55em;
+                color: $dark-gray;
+
+                span {
+                    margin-left: .5em;
+                }
+            }
+        }
+    }
 }
