add pagination for orders

--- a/projects/administration-portal/src/app/components/confections/confection-table/confection-table.component.scss
+++ b/projects/administration-portal/src/app/components/confections/confection-table/confection-table.component.scss
@@ -36,7 +36,7 @@
             transition: background-color 0.45s ease 0s;
 
             &:hover {
-                background-color: $lightest-gray-alfa;
+                background-color: $lightest-gray-alfa636;
             }
         }
 
