--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.scss
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.scss
@@ -26,6 +26,6 @@
     &__pagination {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
     }
 }
