--- a/projects/administration-portal/src/app/scss/abstracts/_variables.scss
+++ b/projects/administration-portal/src/app/scss/abstracts/_variables.scss
@@ -15,7 +15,8 @@ $light-gray: #AEAEAE !default;
 $gray-stroke: #E7E8EB !default;
 $medium-gray: #9A9797 !default;
 $lightest-gray: #dee2e6 !default;
-$lightest-gray-alfa: #dee2e636 !default;
+$lightest-gray-alfa636: #dee2e636 !default;
+$lightest-gray-alfa650: #dee2e650 !default;
 
 
 $light-orange: #fbc88c !default;
