--- a/projects/administration-portal/src/app/shared/components/pagination/pagination.component.html
+++ b/projects/administration-portal/src/app/shared/components/pagination/pagination.component.html
@@ -17,7 +17,7 @@
       <div class="pagination__item">
         <button 
           class="pagination__btn" 
-          (click)="goToPreviousPage()" 
+          (click)="goToFirstPage()" 
           [disabled]="!hasPreviousPage()"
         >First</button>
       </div>
