add pagination for confections

--- a/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.html
@@ -4,12 +4,17 @@
 
     <app-confection-table 
       class="confection-list__confection-table"
-      [confections]="confections"
+      [confections]="paginatedConfections.items"
       [isLoading]="isLoading"
     ></app-confection-table>
 
     <app-pagination 
       class="confection-list__pagination"
+      [currentPage]="currentPage"
+      [pageSize]="pageSize"
+      [totalPages]="totalPages"
+      [totalCount]="totalCount"
+      (pageChanged)="onPageChange($event)"
     ></app-pagination>
   </div>
 </div>
