update styles for pagination

--- a/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.scss
+++ b/projects/administration-portal/src/app/components/confections/confection-list/confection-list.component.scss
@@ -17,7 +17,7 @@
 
 	&__pagination { 
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
     }
 }
