--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -11,6 +11,7 @@
       class="order-list__order-table"
       [orders]="paginatedOrders.items"
       [isLoading]="isLoading"
+      (onSearch)="search($event)"
     ></app-order-table>
 
     <app-pagination 
