--- a/projects/administration-portal/src/app/components/confections/confection-table/confection-list-toolbar/confection-list-toolbar.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-table/confection-list-toolbar/confection-list-toolbar.component.html
@@ -12,7 +12,13 @@
     </div>
     <div class="toolbar__search search">
       <img class="search__image" src="/assets/icons/search.png"/>
-      <input placeholder="Поиск по Идентификатору, Email, Продукту и другому" class="search__input"/>
+      <input 
+        type="search"
+        class="search__input" 
+        [(ngModel)]="searchTerm"
+        (input)="search()"
+        placeholder="Поиск по Имени или Описанию продукта"
+      />
     </div>
   </div>
 </section>
