--- a/projects/administration-portal/src/app/components/confections/confection-table/confection-table.component.html
+++ b/projects/administration-portal/src/app/components/confections/confection-table/confection-table.component.html
@@ -1,6 +1,7 @@
 <div class="confection-table">
   <app-confection-list-toolbar 
     class="confection-table__toolbar"
+    (searchChanged)="onSearchChanged($event)"
   ></app-confection-list-toolbar>
 
   <div *ngIf="confections.length && !isLoading" class="confection-table__wrapper">
